--- a/.github/workflows/MilestoneUpdater.yml
+++ b/.github/workflows/MilestoneUpdater.yml
@@ -42,30 +42,25 @@ jobs:
           GH_TOKEN: ${{ secrets.milestone_sync }}
           ISSUE_NODE_ID: ${{ github.event.issue.node_id }}
         run: |
-          # Get all issues linked to the parent issue (sub-issues).
-          gh api graphql -F id="$ISSUE_NODE_ID" -f query='
+          # Get all sub-issues using the subIssues connection.
+          gh api graphql -H "GraphQL-Features:sub_issues" -H "GraphQL-Features:issue_types" -F id="$ISSUE_NODE_ID" -f query='
             query($id: ID!) {
               node(id: $id) {
                 ... on Issue {
-                  timelineItems(itemTypes: [CONNECTED_EVENT], first: 50) {
+                  subIssues(first: 100) {
                     nodes {
-                      ... on ConnectedEvent {
-                        subject {
-                          __typename
-                          ... on Issue { number node_id }
-                        }
-                      }
+                      number
+                      id
                     }
                   }
                 }
               }
             }
           ' > result.json
-          # Prepare numbers and node_ids arrays for later use.
-          jq '[.data.node.timelineItems.nodes[].subject | select(.number)] | map(.number)' result.json > subissues_numbers.json
-          jq '[.data.node.timelineItems.nodes[].subject | select(.node_id)] | map(.node_id)' result.json > subissues_nodeids.json
+          jq '[.data.node.subIssues.nodes[].number]' result.json > subissues_numbers.json
+          jq '[.data.node.subIssues.nodes[].id]' result.json > subissues_ids.json
           echo "numbers=$(cat subissues_numbers.json | jq -c '.')" >> "$GITHUB_OUTPUT"
-          echo "nodeids=$(cat subissues_nodeids.json | jq -c '.')" >> "$GITHUB_OUTPUT"
+          echo "ids=$(cat subissues_ids.json | jq -c '.')" >> "$GITHUB_OUTPUT"
 
       - name: Update sub-issues with parent's milestone
         env:
@@ -89,16 +84,16 @@ jobs:
         env:
           GH_TOKEN: ${{ secrets.milestone_sync }}
         run: |
-          nodeids=${{ steps.subissues.outputs.nodeids }}
+          ids=${{ steps.subissues.outputs.ids }}
           PROJECT_NODE_ID="PVT_kwDODH0FwM4A3yi4"
 
-          if [ "$nodeids" = "" ] || [ "$nodeids" = "[]" ]; then
-            echo "No sub-issue node IDs found. Exiting."
+          if [ "$ids" = "" ] || [ "$ids" = "[]" ]; then
+            echo "No sub-issue ids found. Exiting."
             exit 0
           fi
 
-          for node_id in $(echo "$nodeids" | jq -r '.[]'); do
-            echo "Adding sub-issue node $node_id to project $PROJECT_NODE_ID"
+          for issue_id in $(echo "$ids" | jq -r '.[]'); do
+            echo "Adding sub-issue node $issue_id to project $PROJECT_NODE_ID"
             gh api graphql -f query='
               mutation($projectId: ID!, $contentId: ID!) {
                 addProjectV2ItemById(input: {projectId: $projectId, contentId: $contentId}) {
@@ -106,7 +101,7 @@ jobs:
                     id
                   }
                 }
-              }' -F projectId="$PROJECT_NODE_ID" -F contentId="$node_id"
+              }' -F projectId="$PROJECT_NODE_ID" -F contentId="$issue_id"
           done
 
 # Notes:
@@ -114,4 +109,4 @@ jobs:
 # - All sub-issues are updated with the parent's milestone regardless of their type.
 # - Sub-issues are also added to the specified project.
 # - The workflow expects a secret named 'milestone_sync' containing a PAT with 'repo', 'project', and 'issues' scopes.
-# - If you expect more than 50 sub-issues, add pagination logic.
+# - If you expect more than 100 sub-issues, add pagination logic.
