--- a/.github/workflows/MilestoneUpdater.yml
+++ b/.github/workflows/MilestoneUpdater.yml
@@ -18,44 +18,40 @@ jobs:
           org="${GITHUB_REPOSITORY%/*}"
           repo="${GITHUB_REPOSITORY#*/}"
           number="${{ github.event.issue.number }}"
-      
+
           # Validate the issue number
           if [[ -z "$number" || ! "$number" =~ ^[0-9]+$ ]]; then
             echo "ERROR: Invalid issue number: $number"
             exit 1
           fi
-      
+
           # Debugging output
           echo "DEBUG: Repository Org: $org"
           echo "DEBUG: Repository Name: $repo"
           echo "DEBUG: Issue Number: $number"
-      
-          # Ensure the issue number is passed as an integer
-          result=$(gh api graphql -H "GraphQL-Features: issue_types" -F owner="$org" -F repository="$repo" -F number=$((number)) -f query='
-          query ($owner: String!, $repository: String!, $number: Int!) {
-            repository(owner: $owner, name: $repository) {
+
+          # Query the issue's type using the GraphQL API with the issue_types preview header
+          result=$(gh api graphql -H "GraphQL-Features: issue_types" -F owner="$org" -F repo="$repo" -F number=$((number)) -f query='
+          query ($owner: String!, $repo: String!, $number: Int!) {
+            repository(owner: $owner, name: $repo) {
               issue(number: $number) {
                 issueType { name }
               }
             }
           }')
-      
           echo "DEBUG: Raw GraphQL result:"
           echo "$result"
-      
+
           # Extract issue type from result
           type=$(echo "$result" | jq -r '.data.repository.issue.issueType.name')
           echo "DEBUG: Extracted issue type: $type"
           echo "type=$type" >> $GITHUB_OUTPUT
-      
+
           # Validate the extracted issue type
           if [ -z "$type" ] || [ "$type" = "null" ]; then
             echo "ERROR: Failed to determine issue type. Exiting."
             exit 1
           fi
-      - name: Debug issue type
-        run: |
-          echo "DEBUG: Issue type is ${{ steps.check_type.outputs.type }}"
 
       - name: Exit if issue type is not bug or story
         if: ${{ steps.check_type.outputs.type != 'bug' && steps.check_type.outputs.type != 'story' }}
@@ -69,6 +65,7 @@ jobs:
           GH_TOKEN: ${{ secrets.milestone_sync }}
           ISSUE_NODE_ID: ${{ github.event.issue.node_id }}
         run: |
+          # Get all sub-issues using the subIssues connection
           gh api graphql -H "GraphQL-Features:sub_issues" -H "GraphQL-Features:issue_types" -F id="$ISSUE_NODE_ID" -f query='
             query($id: ID!) {
               node(id: $id) {
@@ -98,12 +95,34 @@ jobs:
             echo "No sub-issues found. Exiting."
             exit 0
           fi
-          
-          for number in $(echo "$numbers" | jq -r '.[]'); do
+
+          for num in $(echo "$numbers" | jq '.[]'); do
+            echo "Updating sub-issue $num with milestone $ISSUE_MILESTONE"
+            gh api repos/${{ github.repository }}/issues/$num \
+              -X PATCH \
+              -F milestone="$ISSUE_MILESTONE"
+          done
+
+      - name: Add sub-issues to Project PVT_kwDODH0FwM4A3yi4 (if not already present)
+        env:
+          GH_TOKEN: ${{ secrets.milestone_sync }}
+        run: |
+          ids=${{ steps.subissues.outputs.ids }}
+          PROJECT_NODE_ID="PVT_kwDODH0FwM4A3yi4"
+
+          if [ "$ids" = "" ] || [ "$ids" = "[]" ]; then
+            echo "No sub-issue ids found. Exiting."
+            exit 0
+          fi
+
+          for issue_id in $(echo "$ids" | jq -r '.[]'); do
+            echo "Adding sub-issue node $issue_id to project $PROJECT_NODE_ID"
             gh api graphql -f query='
-            mutation($number: Int!, $milestone: Int!) {
-              updateIssue(input: {number: $number, milestone: $milestone}) {
-                issue { number }
-              }
-            }' -f number="$number" -f milestone="${ISSUE_MILESTONE}"
+              mutation($projectId: ID!, $contentId: ID!) {
+                addProjectV2ItemById(input: {projectId: $projectId, contentId: $contentId}) {
+                  item {
+                    id
+                  }
+                }
+              }' -F projectId="$PROJECT_NODE_ID" -F contentId="$issue_id"
           done
