--- a/.github/workflows/MilestoneUpdater.yml
+++ b/.github/workflows/MilestoneUpdater.yml
@@ -18,18 +18,15 @@ jobs:
           org="${GITHUB_REPOSITORY%/*}"
           repo="${GITHUB_REPOSITORY#*/}"
           number="${{ github.event.issue.number }}"
-
           # Validate the issue number
           if [[ -z "$number" || ! "$number" =~ ^[0-9]+$ ]]; then
             echo "ERROR: Invalid issue number: $number"
             exit 1
           fi
-
           # Debugging output
           echo "DEBUG: Repository Org: $org"
           echo "DEBUG: Repository Name: $repo"
           echo "DEBUG: Issue Number: $number"
-
           # Query the issue's type using the GraphQL API with the issue_types preview header
           result=$(gh api graphql -H "GraphQL-Features: issue_types" -f owner="$org" -f repo="$repo" -F number=$((number)) -f query='
           query ($owner: String!, $repo: String!, $number: Int!) {
@@ -41,29 +38,24 @@ jobs:
           }')
           echo "DEBUG: Raw GraphQL result:"
           echo "$result"
-
           # Extract issue type from result
           type=$(echo "$result" | jq -r '.data.repository.issue.issueType.name')
           echo "DEBUG: Extracted issue type: $type"
           echo "type=$type" >> $GITHUB_OUTPUT
-
           # Validate the extracted issue type
           if [ -z "$type" ] || [ "$type" = "null" ]; then
             echo "ERROR: Failed to determine issue type. Exiting."
             exit 1
           fi
-
       - name: Debug output - show extracted type
         run: |
           echo "CHECK_TYPE_OUTPUT_TYPE=${{ steps.check_type.outputs.type }}"
-
       # This step will fail (exit 1) if not Bug or Story, stopping the job
       - name: Stop workflow if issue type is not Bug or Story
         if: ${{ steps.check_type.outputs.type != 'Bug' && steps.check_type.outputs.type != 'Story' }}
         run: |
           echo "Issue type is neither 'Bug' nor 'Story'. Stopping workflow."
           exit 1
-
       - name: Get sub-issues via GraphQL
         id: subissues
         env:
@@ -89,8 +81,7 @@ jobs:
           jq '[.data.node.subIssues.nodes[].id]' result.json > subissues_ids.json
           echo "numbers=$(cat subissues_numbers.json | jq -c '.')" >> $GITHUB_OUTPUT
           echo "ids=$(cat subissues_ids.json | jq -c '.')" >> $GITHUB_OUTPUT
-
-      - name: Update sub-issues with parent's milestone
+      - name: Update sub-issues with parent's milestone (skip if already set)
         env:
           GH_TOKEN: ${{ secrets.milestone_sync }}
           ISSUE_MILESTONE: ${{ github.event.issue.milestone.number }}
@@ -102,24 +93,32 @@ jobs:
           fi
 
           for num in $(echo "$numbers" | jq '.[]'); do
+            # Get current milestone of the sub-issue
+            current_milestone=$(gh api repos/${{ github.repository }}/issues/$num --jq '.milestone.number')
+            if [ "$current_milestone" = "null" ]; then
+              current_milestone=""
+            fi
+
+            if [ "$current_milestone" = "$ISSUE_MILESTONE" ]; then
+              echo "Sub-issue $num already has milestone $ISSUE_MILESTONE, skipping."
+              continue
+            fi
+
             echo "Updating sub-issue $num with milestone $ISSUE_MILESTONE"
             gh api repos/${{ github.repository }}/issues/$num \
               -X PATCH \
               -F milestone="$ISSUE_MILESTONE"
           done
-
       - name: Add sub-issues to Project PVT_kwDODH0FwM4A3yi4 (if not already present)
         env:
           GH_TOKEN: ${{ secrets.milestone_sync }}
         run: |
           ids=${{ steps.subissues.outputs.ids }}
           PROJECT_NODE_ID="PVT_kwDODH0FwM4A3yi4"
-
           if [ "$ids" = "" ] || [ "$ids" = "[]" ]; then
             echo "No sub-issue ids found. Exiting."
             exit 0
           fi
-
           for issue_id in $(echo "$ids" | jq -r '.[]'); do
             echo "Adding sub-issue node $issue_id to project $PROJECT_NODE_ID"
             gh api graphql -f query='
