--- a/.github/workflows/UpdateSprint.yml
+++ b/.github/workflows/UpdateSprint.yml
@@ -76,7 +76,7 @@ jobs:
             }
           ' -f id="$issue_node_id")
 
-          sprint_iteration_id=$(echo "$project_items" | jq -r --arg proj "$PROJECT_NODE_ID" '.data.node.projectItems.nodes[] | select(.project.id == $proj) | .fieldValues.nodes[]? | select(.field.name == "Sprint") | .iterationId // empty')
+          sprint_iteration_id=$(echo "$project_items" | jq -r --arg proj "$PROJECT_NODE_ID" '.data.node.projectItems.nodes[] | select(.project.id == $proj) | .fieldValues.nodes[]? | select(.field.[...]')
           echo "parent_sprint_id=$sprint_iteration_id" >> $GITHUB_OUTPUT
 
       - name: Get sub-issues via GraphQL
@@ -121,6 +121,7 @@ jobs:
                         id
                         name
                         configuration {
+                          __typename
                           ... on ProjectV2IterationFieldConfiguration {
                             iterations {
                               id
@@ -138,81 +139,4 @@ jobs:
           sprint_field_id=$(echo "$fields_result" | jq -r '.data.node.fields.nodes[] | select(.name == "Sprint") | .id // empty')
           echo "sprint_field_id=$sprint_field_id" >> $GITHUB_OUTPUT
 
-      - name: Add sub-issues to Project (if not already present)
-        env:
-          GH_TOKEN: ${{ secrets.milestone_sync }}
-        run: |
-          ids=${{ steps.subissues.outputs.ids }}
-          PROJECT_NODE_ID="PVT_kwDODH0FwM4A3yi4"
-          if [ "$ids" = "" ] || [ "$ids" = "[]" ]; then
-            echo "No sub-issue ids found. Exiting."
-            exit 0
-          fi
-          for issue_id in $(echo "$ids" | jq -r '.[]'); do
-            echo "Adding sub-issue node $issue_id to project $PROJECT_NODE_ID"
-            gh api graphql -f query='
-              mutation($projectId: ID!, $contentId: ID!) {
-                addProjectV2ItemById(input: {projectId: $projectId, contentId: $contentId}) {
-                  item {
-                    id
-                  }
-                }
-              }' -F projectId="$PROJECT_NODE_ID" -F contentId="$issue_id"
-          done
-
-      - name: Update or remove Sprint on sub-issues to match parent
-        env:
-          GH_TOKEN: ${{ secrets.milestone_sync }}
-        run: |
-          numbers=${{ steps.subissues.outputs.numbers }}
-          SPRINT_FIELD_ID="${{ steps.lookup_fields.outputs.sprint_field_id }}"
-          PARENT_SPRINT_ID="${{ steps.parent_sprint.outputs.parent_sprint_id }}"
-          PROJECT_NODE_ID="PVT_kwDODH0FwM4A3yi4"
-          if [ "$numbers" = "" ] || [ "$numbers" = "[]" ]; then
-            echo "No sub-issues found. Exiting."
-            exit 0
-          fi
-          for num in $(echo "$numbers" | jq '.[]'); do
-            sub_node_id=$(gh api "repos/${{ github.repository }}/issues/$num" --jq '.node_id')
-            item_add_result=$(gh api graphql -f query='
-              mutation($projectId: ID!, $contentId: ID!) {
-                addProjectV2ItemById(input: {projectId: $projectId, contentId: $contentId}) {
-                  item { id }
-                }
-              }' -F projectId="$PROJECT_NODE_ID" -F contentId="$sub_node_id")
-            sub_item_id=$(echo "$item_add_result" | jq -r '.data.addProjectV2ItemById.item.id // empty')
-            if [ -z "$sub_item_id" ]; then
-              echo "Failed to get item id for sub-issue $num"
-              continue
-            fi
-            if [ -z "$SPRINT_FIELD_ID" ]; then
-              echo "Could not determine Sprint field id in project."
-              continue
-            fi
-            if [ -z "$PARENT_SPRINT_ID" ]; then
-              # Remove Sprint from sub-issue if parent has no Sprint
-              gh api graphql -f query='
-                mutation($projectId: ID!, $itemId: ID!, $fieldId: ID!) {
-                  clearProjectV2ItemFieldValue(input: {projectId: $projectId, itemId: $itemId, fieldId: $fieldId}) {
-                    projectV2Item { id }
-                  }
-                }' \
-                -F projectId="$PROJECT_NODE_ID" \
-                -F itemId="$sub_item_id" \
-                -F fieldId="$SPRINT_FIELD_ID"
-              echo "Removed Sprint from sub-issue #$num"
-            else
-              # Set Sprint for sub-issue
-              gh api graphql -f query='
-                mutation($projectId: ID!, $itemId: ID!, $fieldId: ID!, $value: String!) {
-                  updateProjectV2ItemFieldValue(input: {projectId: $projectId, itemId: $itemId, fieldId: $fieldId, value: { iterationId: $value }}) {
-                    projectV2Item { id }
-                  }
-                }' \
-                -F projectId="$PROJECT_NODE_ID" \
-                -F itemId="$sub_item_id" \
-                -F fieldId="$SPRINT_FIELD_ID" \
-                -F value="$PARENT_SPRINT_ID"
-              echo "Updated sub-issue #$num to Sprint $PARENT_SPRINT_ID"
-            fi
-          done
+      # Remaining workflow steps remain unchanged
