--- a/.github/workflows/UpdateSprint.yml
+++ b/.github/workflows/UpdateSprint.yml
@@ -42,25 +42,49 @@ jobs:
           echo "Issue type is neither 'Bug' nor 'Story'. Stopping workflow."
           exit 0
 
-      - name: Detect parent Sprint iterationId
+      - name: Get parent Sprint iterationId and field id (inherit logic)
         id: parent_sprint
         env:
           GH_TOKEN: ${{ secrets.milestone_sync }}
         run: |
           PROJECT_NODE_ID="PVT_kwDODH0FwM4A3yi4"
-          issue_number="${{ github.event.issue.number }}"
-          repo="${{ github.repository }}"
-          issue_node_id=$(gh api "repos/$repo/issues/$issue_number" | jq -r '.node_id')
+          issue_node_id="${{ github.event.issue.node_id }}"
 
-          project_items=$(gh api graphql -f query='
+          fields_result=$(gh api graphql -f query='
+            query($project: ID!) {
+              node(id: $project) {
+                ... on ProjectV2 {
+                  fields(first: 50) {
+                    nodes {
+                      ... on ProjectV2IterationField {
+                        id
+                        name
+                        configuration {
+                          ... on ProjectV2IterationFieldConfiguration {
+                            iterations {
+                              id
+                              title
+                            }
+                          }
+                        }
+                      }
+                    }
+                  }
+                }
+              }
+            }
+          ' -F project="$PROJECT_NODE_ID")
+
+          sprint_field_id=$(echo "$fields_result" | jq -r '.data.node.fields.nodes[] | select(.name == "Sprint") | .id // empty')
+
+          parent_items=$(gh api graphql -f query='
             query($id: ID!) {
               node(id: $id) {
                 ... on Issue {
-                  projectItems(first: 25) {
+                  projectItems(first: 10) {
                     nodes {
-                      id
                       project { id }
-                      fieldValues(first: 30) {
+                      fieldValues(first: 20) {
                         nodes {
                           ... on ProjectV2ItemFieldIterationValue {
                             field { name id }
@@ -76,8 +100,9 @@ jobs:
             }
           ' -f id="$issue_node_id")
 
-          sprint_iteration_id=$(echo "$project_items" | jq -r --arg proj "$PROJECT_NODE_ID" '.data.node.projectItems.nodes[] | select(.project.id == $proj) | .fieldValues.nodes[]? | select(.field.[...]')
-          echo "parent_sprint_id=$sprint_iteration_id" >> $GITHUB_OUTPUT
+          parent_sprint_iteration_id=$(echo "$parent_items" | jq -r --arg proj "$PROJECT_NODE_ID" '.data.node.projectItems.nodes[] | select(.project.id == $proj) | .fieldValues.nodes[]? | select(.field.name == "Sprint") | .iterationId // empty')
+          echo "sprint_field_id=$sprint_field_id" >> $GITHUB_OUTPUT
+          echo "parent_sprint_id=$parent_sprint_iteration_id" >> $GITHUB_OUTPUT
 
       - name: Get sub-issues via GraphQL
         id: subissues
@@ -105,40 +130,6 @@ jobs:
           echo "numbers=$(cat subissues_numbers.json | jq -c '.')" >> $GITHUB_OUTPUT
           echo "ids=$(cat subissues_ids.json | jq -c '.')" >> $GITHUB_OUTPUT
 
-      - name: Get Sprint field id
-        id: lookup_fields
-        env:
-          GH_TOKEN: ${{ secrets.milestone_sync }}
-        run: |
-          PROJECT_NODE_ID="PVT_kwDODH0FwM4A3yi4"
-          fields_result=$(gh api graphql -f query='
-            query($project: ID!) {
-              node(id: $project) {
-                ... on ProjectV2 {
-                  fields(first: 50) {
-                    nodes {
-                      ... on ProjectV2IterationField {
-                        id
-                        name
-                        configuration {
-                          __typename
-                          ... on ProjectV2IterationFieldConfiguration {
-                            iterations {
-                              id
-                              title
-                            }
-                          }
-                        }
-                      }
-                    }
-                  }
-                }
-              }
-            }
-          ' -F project="$PROJECT_NODE_ID")
-          sprint_field_id=$(echo "$fields_result" | jq -r '.data.node.fields.nodes[] | select(.name == "Sprint") | .id // empty')
-          echo "sprint_field_id=$sprint_field_id" >> $GITHUB_OUTPUT
-
       - name: Add sub-issues to Project (if not already present)
         env:
           GH_TOKEN: ${{ secrets.milestone_sync }}
@@ -161,12 +152,12 @@ jobs:
               }' -F projectId="$PROJECT_NODE_ID" -F contentId="$issue_id"
           done
 
-      - name: Update or remove Sprint on sub-issues to match parent
+      - name: Update or remove Sprint on sub-issues to match parent (inherit logic)
         env:
           GH_TOKEN: ${{ secrets.milestone_sync }}
         run: |
           numbers=${{ steps.subissues.outputs.numbers }}
-          SPRINT_FIELD_ID="${{ steps.lookup_fields.outputs.sprint_field_id }}"
+          SPRINT_FIELD_ID="${{ steps.parent_sprint.outputs.sprint_field_id }}"
           PARENT_SPRINT_ID="${{ steps.parent_sprint.outputs.parent_sprint_id }}"
           PROJECT_NODE_ID="PVT_kwDODH0FwM4A3yi4"
           if [ "$numbers" = "" ] || [ "$numbers" = "[]" ]; then
